@@ -28,6 +28,7 @@
 - fixed: Laufzeitanzeige in der Bibliothek für Episoden die länger als 60 Minuten sind
 - optimized: Kleine Nachbesserrung für den Fix von User @mobsean für die Bibliothekfunktion: Sobald reguläre Episoden einer Serie vorhanden waren wurden die Specials nicht mehr angezeigt
 
-[B]Version 1.0.5  (30.06.2019)[/B] by realvito[CR]
+[B]Version 1.0.5+1.0.6  (30.06.2019)[/B] by realvito[CR]
+- returned: Änderungen in Zeile 638 verworfen !!!
 - fixed: UnicodeDecodeError: 'ascii' codec can't decode...
 - optimized: Serienordner mit neuen Episoden - gekennzeichnet (@mobsean)
